refactor(logging): 引入新日志系统Loki，优化日志模块和日志系统控制器
- 将自动封禁模块中日志调用统一改用 LogModule 与 LogAction 枚举，简化代码并明确日志分类
- 在作弊插件及管理模块中完善审计上下文管理，避免线程上下文污染
- 替换部分系统日志调用为 AuditLogger，强化错误日志记录一致性
- 在客户端类中添加角色缓存机制，优化角色信息快速访问
- 重构日志系统控制器，改用统一的 ResultBody 返回结构，提升接口稳定性及一致性
- 实现日志系统进程管理接口，支持进程状态查询、启动、停止、重启及重置操作
- 增加日志配置文件读取与保存接口，支持纯文本及 YAML 格式，简化日志动态配置
- 增加多路径脚本和配置文件查找，提高部署环境适应性与鲁棒性
- 清理旧配置文件，避免遗留配置影响新启动流程
- 统一异常处理，使用 RuntimeException 抛出错误，提升错误信息准确性与可追踪性